Changes in project

--- a/TravelCalculator/appsettings.json
+++ b/TravelCalculator/appsettings.json
@@ -1,8 +1,11 @@
 {
-"ConnectionStrings": {
-  "DefaultConnection": "User ID=postgres; Password=mspz3jic; Host=localhost; Port=5432; Database=Season; Integrated Security=true; Pooling=true;"
-  //"DefaultConnection": "Host=travel-calculator.postgres.database.azure.com;Port=5432;Database=travel-calculator;Username=tcadmin@travel-calculator;Password=Fzcg7czY0M"
-},
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres; Password=mspz3jic; Host=localhost; Port=5432; Database=Season; Integrated Security=true; Pooling=true;"
+    //"DefaultConnection": "Host=travel-calculator.postgres.database.azure.com;Port=5432;Database=travel-calculator;Username=tcadmin@travel-calculator;Password=Fzcg7czY0M"
+  },
+  "IOSettings": {
+    "ProcessedCsvFilePath": "C:\\Users\\Faramush\\source\\repos\\TravelCalculator\\"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
