--- a/TravelCalculator/TravelCalculator.csproj
+++ b/TravelCalculator/TravelCalculator.csproj
@@ -12,11 +12,15 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TravelCalculator.Domain\TravelCalculator.Domain.csproj" />
     <ProjectReference Include="..\TravelCalculator.Persistence\TravelCalculator.Persistence.csproj" />
+    <ProjectReference Include="..\TravelCalculator.Service\TravelCalculator.Service.csproj" />
   </ItemGroup>
 
 </Project>
